Fix overflow hidden

--- a/app/_scss/ada.scss
+++ b/app/_scss/ada.scss
@@ -18,9 +18,7 @@ html, body, .container, .row {
 	margin-right: 0;
 	padding-left: 0;
 	padding-right: 0;
-	min-height: 100%;
 	width: 100%;
-	overflow: hidden;
 	font-family: 'Open Sans', 'sans-serif';
 	font-weight: 400;
 	color: $foreground;
